fix(matrix): address code review findings on PR #12
Kestra guidelines
- AbstractConnection: drop readTimeout, connectionPoolIdleTimeout and
  maxContentLength from RequestOptions. They were declared and documented but
  never wired into HttpConfiguration, so any override was silently discarded.
  Rather than wire them, they are removed: the matching builder setters are
  @Deprecated in core 1.3.13 and gone entirely in 2.x, so calling them would
  throw NoSuchMethodError on a Kestra 2.x instance. The @Schema description now
  documents only what is actually applied.
- AbstractConnection: drop `dynamic = true` from `options` — it is new code with
  a POJO type, and issue #1 forbids the legacy annotation on new code.
- Convert every @Schema description to a Java text block per the repo's
  documentation formatting rules.
- Move accessToken to the "connection" group (it is an authentication
  credential) and customFields/customMessage out of "destination" to "main"
  (they shape message content, not its destination).

Correctness
- MatrixApiService: derive the Matrix transaction ID from the task run ID
  instead of a fresh UUID per call. The task run ID is stable across attempts,
  so a Kestra `retry` of a send that already reached the homeserver is now
  deduplicated server-side instead of posting the message twice.
- MatrixApiService: replace the bare `RuntimeException(e)` wrap for
  connectivity failures with an ErrorSendingMessageException naming the
  homeserver and suggesting what to check.
- matrix-template.peb: actually render customMessage and customFields. Core's
  ExecutionService puts both in the template map, but the template ignored
  them, so the properties were documented yet non-functional. Guarded with
  `is defined`, matching the convention in plugin-notifications — `is not
  empty` raises a PebbleException on an undefined variable. customMessage's
  description now says it appends rather than overrides, which is what it does.

Supply chain
- Template